exports[`BpkInput should render correctly 1`] = `
<input
  className="bpk-input"
  id="test"
  name="test"
  onChange={[Function]}
  placeholder="Enter a country, city or airport"
  type="text"
  value="" />
`;

exports[`BpkInput should render correctly with "docked" attribute 1`] = `
<input
  className="bpk-input bpk-input--docked"
  id="test"
  name="test"
  onChange={[Function]}
  placeholder="Enter a country, city or airport"
  type="text"
  value="" />
`;

exports[`BpkInput should render correctly with "large" attribute 1`] = `
<input
  className="bpk-input bpk-input--large"
  id="test"
  name="test"
  onChange={[Function]}
  placeholder="Enter a country, city or airport"
  type="text"
  value="" />
`;

exports[`BpkInput should render correctly with type attribute 1`] = `
<input
  className="bpk-input"
  id="test"
  name="test"
  onChange={[Function]}
  placeholder="Enter a country, city or airport"
  type="password"
  value="" />
`;

exports[`BpkInput should render correctly with valid attribute set to "false" 1`] = `
<input
  className="bpk-input bpk-input--invalid"
  id="test"
  name="test"
  onChange={[Function]}
  placeholder="Enter a country, city or airport"
  type="text"
  value="" />
`;

exports[`BpkInput should render correctly with valid attribute set to "true" 1`] = `
<input
  className="bpk-input bpk-input--valid"
  id="test"
  name="test"
  onChange={[Function]}
  placeholder="Enter a country, city or airport"
  type="text"
  value="" />
`;

exports[`BpkInput should render correctly with value 1`] = `
<input
  className="bpk-input"
  id="test"
  name="test"
  onChange={[Function]}
  placeholder="Enter a country, city or airport"
  type="text"
  value="My value" />
`;
